<resources>
    <string name="app_name">PlayAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>


    <!--关于-->
    <string name="upgrade_content">1.更新了等等等等\n2.优化了什么什么</string>
    <string name="author">作者</string>
    <string name="data_source">数据来源</string>
    <string name="icon_source">图标来源</string>
    <string name="iconfont">Iconfont - 阿里巴巴矢量图标库</string>
    <string name="wananzhuo">玩Android - 每日推荐优质文章</string>
    <string name="slippery">上滑</string>
    <string name="to_register">还没有账号？赶紧去注册</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>

    <!--主页-->
    <string name="to_login">点我即可登录哦~</string>
    <string name="integral">积分：</string>
    <string name="default_integral">0</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="open_source_project">开源项目</string>
    <string name="coin_rank">积分排行</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="register">注册</string>
    <string name="please_confrim_password">请确认密码</string>
    <string name="hotkey">热门搜索</string>
    <string name="exit_logged">退出登录</string>
    <string name="home">首页</string>
    <string name="empty_text">空空如也哦~</string>


</resources>
