<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.mine.activity.RegisiterActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titlebar:fillStatusBar="true"
        titlebar:statusBarColor="@color/colorPrimary"
        titlebar:statusBarMode="light"
        titlebar:titleBarColor="@color/colorPrimary"
        app:leftType="textView"
        app:leftDrawable="@mipmap/icon_back"
        app:leftTextColor="@android:color/white"
        app:leftTextSize="@dimen/sp_18"
        app:leftText="@string/register"
        app:leftDrawablePadding="20dp"
        app:showBottomLine="false"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_20">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_account"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_60">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_60">

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_confrim_password"/>

    </LinearLayout>



    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/selector_login_button"
        android:text="@string/register"
        android:textColor="@android:color/white"/>


</LinearLayout>