<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.main.activity.AboutActivity">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftDrawable="@mipmap/icon_back"
        app:leftDrawablePadding="20dp"
        app:leftText="@string/about"
        app:leftTextColor="@android:color/white"
        app:leftTextSize="@dimen/sp_18"
        app:leftType="textView"
        app:showBottomLine="false"
        titlebar:fillStatusBar="true"
        titlebar:statusBarColor="@color/colorPrimary"
        titlebar:statusBarMode="light"
        titlebar:titleBarColor="@color/colorPrimary" />

    <com.daimajia.swipe.SwipeLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:drag_edge="bottom"
        app:show_mode="pull_out">

        <LinearLayout
            android:id="@+id/layout_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="版本迭代记录"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <LinearLayout
                android:id="@+id/layout_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="1.0.1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_app"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_source" />

                    <TextView
                        android:id="@+id/tv_data_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/wananzhuo"
                        android:textColor="#3d7dd7"
                        android:textStyle="italic"
                        android:typeface="monospace"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_source" />

                    <TextView
                        android:id="@+id/tv_icon_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/iconfont"
                        android:textStyle="italic"
                        android:textColor="#3d7dd7"
                        android:typeface="monospace"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="渣渣"
                        android:textColor="#3d7dd7"
                        android:typeface="sans"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/img_slippery"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/slippery" />

            <ImageView
                android:id="@+id/img_slippery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_slippery" />

        </RelativeLayout>

    </com.daimajia.swipe.SwipeLayout>

</LinearLayout>